# mcp-rg-editor

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  diagnostics.txt  docker-compose.yml  importantcomments.txt  package.json  pnpm-lock.yaml  repomix-output-tauri-nextjs.xml  repomix.config.json
src/: config.rs  error.rs  main.rs
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: config_commands.rs  edit_commands.rs  filesystem_commands.rs  mod.rs  process_commands.rs  ripgrep_commands.rs  terminal_commands.rs
src-tauri/src/mcp/: handler.rs  mod.rs  schemas.rs
src-tauri/src/mcp/tool_impl/: edit.rs  filesystem.rs  mod.rs  process.rs  ripgrep.rs  terminal.rs
src-tauri/src/utils/: audit_logger.rs  fuzzy_search_logger.rs  line_ending_handler.rs  mod.rs  path_utils.rs  terminal_session_manager.rs
src/app/: layout.tsx  page.tsx
src/app/config/: page.tsx
src/components/ui/: use-toast.ts
src/mcp/: handler.rs  mod.rs  schemas.rs
src/styles/: globals.css
src/tools/: edit_tool.rs  filesystem_tool.rs  mod.rs  process_tool.rs  ripgrep_tool.rs  terminal_tool.rs
src/utils/: audit_logger.rs  fuzzy_search_logger.rs  line_ending_handler.rs  mod.rs  path_utils.rs
tests/: README.md  test_local_mcp.sh  test_mcp.json  test_mcp_docker.sh
