[package]
name = "mcp-rg-editor"
version = "0.3.0"
edition = "2021"
authors = ["AI Assistant <ai@example.com>"]
description = "Desktop Commander features in Rust: Ripgrep, Filesystem, Terminal, Process, and Editing MCP server."

[dependencies]
# MCP implementation
rust-mcp-sdk = "0.2.6"
rust-mcp-schema = "0.4.0"
rust-mcp-transport = "0.2.3" # Ensure this version aligns with rust-mcp-sdk if it has its own sse feature
async-trait = "0.1.88"
dunce = "1.0.4"

# Core functionality
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.8.4", optional = true } # For SSE transport
hyper = { version = "1.3.1", features = ["full"], optional = true } # For Axum SSE
tower-http = { version = "0.6.4", features = ["fs", "trace", "cors"], optional = true } # For Axum SSE

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "2.0.12"
anyhow = "1.0.86"

# Configuration
dotenvy = "0.15.7"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "fmt"] }

# Utilities
which = "7.0.3" # For checking if rg is installed
uuid = { version = "1.8.0", features = ["v4"] } # For session IDs
strsim = "0.11.1" # For fuzzy string similarity in edit_tool
sysinfo = "0.35.1" # For listing processes
regex = "1.10.5" # For command blocking and other parsing
shellexpand = "3.1.0" # For tilde (~) expansion
chrono = { version = "0.4.38", features = ["serde"] } # For timestamps
reqwest = { version = "0.12.4", features = ["json", "stream"] } # For reading from URLs
base64 = "0.22.1" # For image handling
mime_guess = "2.0.4" # For MIME type detection
diff = "0.1.13" # Added for edit_tool diff highlighting

[dev-dependencies]
tempfile = "3.10.1"

[features]
default = ["stdio", "sse"]
stdio = []
sse = ["dep:axum", "dep:hyper", "dep:tower-http", "rust-mcp-sdk/hyper-server"] # Ensure hyper-server feature is enabled for rust-mcp-sdk