[package]
name = "mcp-rg-editor-tauri" # Renamed
version = "0.1.0"
description = "Desktop Commander Enhanced - Tauri Edition"
authors = ["Your Name"] # Update author
edition = "2021"

[lib]
name = "mcp_rg_editor_tauri_lib" # Unique lib name
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] } # Use latest v2 beta or RC

[dependencies]
tauri = { version = "2.5.1", features = ["devtools", "process-command-api", "global-shortcut-api", "clipboard-manager", "dialog", "fs-extract-api", "http-api", "notification", "shell-open-api"] } # Check latest v2 beta/RC and enable necessary API features
tauri-plugin-fs = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-process = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-http = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-notification = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" } # For potential future use

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12" # Simplified version, original was 2.0.12
anyhow = "1.0"

# Configuration & Logging
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Utilities from original mcp-rg-editor
which = "6.0.3" # Original was 7.0.3, check compatibility or update
uuid = { version = "1.8", features = ["v4"] }
strsim = "0.11"
sysinfo = "0.30" # Original was 0.35.1, check compatibility or update
regex = "1.10"
shellexpand = "3.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] } # For URL reading if http plugin isn't sufficient
base64 = "0.22"
mime_guess = "2.0"
diff = "0.1"
dunce = "1.0"
tokio = { version = "1.37", features = ["full"] } # For async runtime, process management
once_cell = "1.19" # Often useful with Tauri

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
